src/app/pages/certificado/certificado.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

.menu-certificado {
  max-width: 800px;

}

.btn-voltar {
  gap: 6px;
  cursor: pointer;
}

.btn-voltar p {
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0px;
  vertical-align: middle;
  color: #64748b;
}

.btn-voltar i {
  font-size: 20px;
  color: #64748b;
}

.certificado {
  margin-top: 32px;
  background-image: url(../../../../public/certificate/certificate_bg.png);
  width: 800px;
  height: 550px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 12px;
  position: relative;
}

.conteudo-certificado {
  position: relative;
  width: 720px;
  height: 470px;
  background-color: #fff;
  border-radius: 8px;
}

.conteudo-certificado p {
  margin: 0px;
}

.icone-medalha {
  z-index: 1;
  position: absolute;
  top: 12px;
  left: 12px;
}

.info-certificado {
  margin: 64px 40px 48px 40px;
  gap: 20px;
}

.titulo-subtitulo-certificado h1 {
  text-align: center;
  font-weight: 900;
  font-size: 24px;
  line-height: 160%;
  letter-spacing: 2.4px;
  color: #1a2856;
}

.titulo-subtitulo-certificado p {
  font-weight: 400;
  font-size: 12px;
  line-height: 160%;
  letter-spacing: 0;
  text-align: center;
  margin: 0px;
  color: #121621;
}

.nome-aluno {
  font-family: "Dancing Script";
  font-weight: 700;
  font-size: 52px;
  line-height: 80px;
  letter-spacing: 0;
  text-align: center;
  color: #385ac2;
}

.lista-atividade {
  width: 413.7px;
}

.lista-atividade-titulo {
  font-weight: 400;
  font-size: 12px;
  line-height: 160%;
  letter-spacing: 0;
  text-align: center;
  color: #121621;
  margin-bottom: 8px !important;
}

.lista-atividade {
  font-weight: 400;
  font-size: 14px;
  line-height: 160%;
  letter-spacing: 0;
  text-align: center;
  color: #121621;
}

.data-emissao {
  color: #121621;
  font-weight: 700;
  font-size: 11.2px;
  line-height: 160%;
  letter-spacing: 0;
  text-align: center;
}

.img-assinatura {
  position: absolute;
  right: 40px;
  bottom: 24px;
  width: 64px;
  height: 64px;
}

